--- a/index.html
+++ b/index.html
@@ -6,7 +6,9 @@
     <title>JS DOM EVENTS</title>
 </head>
 <body>
-    <h1>DOM special day.</h1>
+    <h1 onclick="console.log('I am clicked')">DOM special day.</h1>
+    <button onclick="console.log(7)">Click Me!</button>
+    <button onclick="console.log(65)">Another button</button>
     <script src="js/events.js"></script>
 </body>
 </html>
