Button onclick message

--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
 </head>
 <body>
     <h1 onclick="console.log('I am clicked')">DOM special day.</h1>
-    <button onclick="console.log(7)">Click Me!</button>
+    <button title="console.log('This is a tooltip!')" onclick="console.log(7)">Click Me!</button>
     <button onclick="console.log(65)">Another button</button>
     <script src="js/events.js"></script>
 </body>
