Add some onclick button and click button than change background color for full page

--- a/index.html
+++ b/index.html
@@ -9,6 +9,13 @@
     <h1 onclick="console.log('I am clicked')">DOM special day.</h1>
     <button title="console.log('This is a tooltip!')" onclick="console.log(7)">Click Me!</button>
     <button onclick="console.log(65)">Another button</button>
+    <br>
+    <button onclick="document.body.style.backgroundColor='yellow'">Make Yellow</button>
+    <button onclick="makeRed()">Make Red</button>
+    <button id="make-blue">Make Blue</button>
     <script src="js/events.js"></script>
+    <script>
+        
+    </script>
 </body>
 </html>
