--- a/index.html
+++ b/index.html
@@ -11,8 +11,14 @@
     <button onclick="console.log(65)">Another button</button>
     <br>
     <button onclick="document.body.style.backgroundColor='yellow'">Make Yellow</button>
+    <!-- option-2 -->
     <button onclick="makeRed()">Make Red</button>
+    <!-- option-3 -->
     <button id="make-blue">Make Blue</button>
+    <!-- option-3 another -->
+    <button id="make-purple">Make Blue</button>
+    <!-- option-4 -->
+     <button id="make-pink">Make Pink</button>
     <script src="js/events.js"></script>
     <script>
         
