Add green click button

--- a/index.html
+++ b/index.html
@@ -19,6 +19,8 @@
     <button id="make-purple">Make Blue</button>
     <!-- option-4 -->
      <button id="make-pink">Make Pink</button>
+    <!-- option-4 another -->
+     <button id="make-green">Make Green</button>
     <script src="js/events.js"></script>
     <script>
         
