Add goldenrod click button

--- a/index.html
+++ b/index.html
@@ -21,6 +21,8 @@
      <button id="make-pink">Make Pink</button>
     <!-- option-4 another -->
      <button id="make-green">Make Green</button>
+    <!-- option-4 final -->
+     <button id="make-goldenrod">Make Golden</button>
     <script src="js/events.js"></script>
     <script>
         
