Create another event of summary

--- a/index.html
+++ b/index.html
@@ -16,7 +16,8 @@
     <!-- option-3 -->
     <button id="make-blue">Make Blue</button>
     <!-- option-3 another -->
-    <button id="make-purple">Make Blue</button>
+    <button id="make-purple">Make Purple</button>
+    <br>
     <!-- option-4 -->
      <button id="make-pink">Make Pink</button>
     <!-- option-4 another -->
