--- a/event-summary.html
+++ b/event-summary.html
@@ -8,13 +8,29 @@
 <body>
     <h1>Final DOM Event Handlers</h1>
     <h3 id="handler-status">Default Text</h3>
+    <p>Default Input Text</p>
+    <input type="text">
+    <button id="btn-update">Update</button>
+    <br>
+    <br>
     <button onclick="handleOnClick()">Handle Event by Add onclick Function</button>
+    <button id="event-listener">handle event by addEventListner</button>
     <script>
         function handleOnClick(){
+            // option-1:
             // console.log('button clicked');
             const handlerStatus=document.getElementById('handler-status');
             handlerStatus.innerText='Handler by function attached on onclick attribute';
         }
+
+        // option-2: 
+        document.getElementById('event-listener').addEventListener('click', function(){
+            const handlerStatus=document.getElementById('handler-status');
+            handlerStatus.innerText='Text updated by add Event listener button';
+        });
+
+        // option-2: recap
+        document
     </script>
 </body>
 </html>
