Added comment box

--- a/event-summary.html
+++ b/event-summary.html
@@ -36,6 +36,7 @@
 
             const p=document.getElementById('input-text-display');
             p.innerText=inputText;
+            inputField.value='';
         });
     </script>
 </body>
