--- a/delegate.html
+++ b/delegate.html
@@ -16,11 +16,25 @@
             <li class="item">Commodi, voluptates odio?</li>
             <li class="item">Nulla, architecto quisquam.</li>
         </ul>
+        <button id="btn-item">Add Item</button>
     </section>
 
     <script>
         const items=document.getElementsByClassName('item');
-        
+        for(const item of items){
+            item.addEventListener('click', function(event){
+                // console.log(event.target.parentNode);
+                event.target.parentNode.removeChild(event.target);
+            });
+        }
+
+        document.getElementById('btn-item').addEventListener('click', function(){
+            const listContainer=document.getElementById('list-container');
+
+            const li =document.createElement('li');
+            li.innerText='Brand New Item added';
+            listContainer.appendChild(li);
+        });
     </script>
 </body>
 </html>
