--- a/delegate.html
+++ b/delegate.html
@@ -20,19 +20,23 @@
     </section>
 
     <script>
-        const items=document.getElementsByClassName('item');
-        for(const item of items){
-            item.addEventListener('click', function(event){
-                // console.log(event.target.parentNode);
-                event.target.parentNode.removeChild(event.target);
-            });
-        }
+        // const items=document.getElementsByClassName('item');
+        // for(const item of items){
+        //     item.addEventListener('click', function(event){
+        //         // console.log(event.target.parentNode);
+        //         event.target.parentNode.removeChild(event.target);
+        //     });
+        // }
+        document.getElementById('list-container').addEventListener('click', function(event){
+            event.target.parentNode.removeChild(event.target);
+        });
 
         document.getElementById('btn-item').addEventListener('click', function(){
             const listContainer=document.getElementById('list-container');
 
             const li =document.createElement('li');
             li.innerText='Brand New Item added';
+            li.classList.add('item');
             listContainer.appendChild(li);
         });
     </script>
